# pyright-to-gitlab

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python.yml  testing.yml
src/: py.typed  pyright_to_gitlab.py
tests/: __init__.py  test_main.py
